1. Метод .of [#413309]